--- a/templates/config/nifi.properties.erb
+++ b/templates/config/nifi.properties.erb
@@ -27,7 +27,7 @@
 ####################
 # State Management #
 ####################
-<% scope.lookupvar('nifi::stage_management').sort.map do |k,v| -%>
+<% scope.lookupvar('nifi::state_management').sort.map do |k,v| -%>
 <% unless v.to_s.strip.empty? -%>
 <%= k %>=<%= v.is_a?(Array) ? v.join(',') : v %>
 <% end -%>
