--- a/templates/config/state-management.xml.erb
+++ b/templates/config/state-management.xml.erb
@@ -20,7 +20,10 @@
   must be specified in the nifi.properties file.
 -->
 <stateManagement>
-    <!--
+<% scope.lookupvar('nifi::state_management_file').sort.map do |provider, config| -%>
+<% case provider
+when 'local-provider'-%>
+ <!--
         State Provider that stores state locally in a configurable directory. This Provider requires the following properties:
         
         Directory - the directory to store components' state in. If the directory being used is a sub-directory of the NiFi installation, it
@@ -32,14 +35,15 @@
         Checkpoint Interval - The amount of time between checkpoints.
      -->
     <local-provider>
-        <id>local-provider</id>
-        <class>org.apache.nifi.controller.state.providers.local.WriteAheadLocalStateProvider</class>
-        <property name="Directory">./state/local</property>
-        <property name="Always Sync">false</property>
-        <property name="Partitions">16</property>
-        <property name="Checkpoint Interval">2 mins</property>
+        <id><% if config.has_key?('id') -%><%= config['id'] -%><% else raise Puppet::Error "you need to provide the local-provider id." end -%></id>
+	<class><% if config.has_key?('class') -%><%= config['class'] -%><% else raise Puppet::Error "you have to provide the local-provieder class." end -%></class>
+<% if config.has_key?('property')
+config['property'].sort.map do |name, value| -%>
+	<property name="<%= name -%>"><%= value -%></property>
+<% end
+end -%>
     </local-provider>
-
+<% when 'cluster-provider' -%>
     <!--
         State Provider that is used to store state in ZooKeeper. This Provider requires the following properties:
         
@@ -56,28 +60,14 @@
                                              This option is available only if access to ZooKeeper is secured via Kerberos or if a Username and Password are set.
     -->
     <cluster-provider>
-        <id>zk-provider</id>
-        <class>org.apache.nifi.controller.state.providers.zookeeper.ZooKeeperStateProvider</class>
-        <property name="Connect String"></property>
-        <property name="Root Node">/nifi</property>
-        <property name="Session Timeout">10 seconds</property>
-        <property name="Access Control">Open</property>
+	<id><% if config.has_key?('id') -%><%= config['id'] -%><% else raise Puppet::Error "You need to provide the cluster-provider id." end -%></id>
+	<class><% if config.has_key?('class') -%><%= config['class'] -%><% else raise Puppet::Error "you have to provide the cluster-provider class" end -%></class>
+<% if config.has_key?('property')
+config['property'].sort.map do |name, value| -%>
+	<property name="<%= name -%>"><%= value -%></property>
+<% end
+else raise Puppet::Error "You need to provide cluster-provider properties" end -%>
     </cluster-provider>
-<% scope.lookupvar('nifi::state_management_file').sort.map do |k,v| -%>
-  <<%= k -%>>
-    <% v.sort.map do |vk,vv| -%>
-      <% case vk
-         when "id" -%>
-    <id><%= vv %></id>
-      <% when "class" -%>
-    <class><%= vv %></class>
-      <% when "property" -%>
-        <% vv.sort.map do |p,v| -%>
-    <property name="<%= p -%>"><%= v -%></property>
-        <% end -%>
-      <% end -%>
-    <% end -%>
-  </<%= k -%>>
-<% end -%>
-  
+<% else raise Puppet::Error "The ${provider} doesn't exist, try with local-provider or cluster-provider." end
+end -%>
 </stateManagement>
