--- a/templates/service/unit-nifi.erb
+++ b/templates/service/unit-nifi.erb
@@ -9,7 +9,7 @@ User=<%= scope.lookupvar('nifi::nifi_user') %>
 Group=<%= scope.lookupvar('nifi::nifi_group') %>
 Environment='BOOTSTRAP_CONF=<%= scope.lookupvar('nifi::config_dir') %>'
 ExecStartPre=/bin/mkdir -p <%= scope.lookupvar('nifi::pid_dir') %>
-ExecstartPre=/bin/chown -R <%= scope.lookupvar('nifi::nifi_user') %>:<%= scope.lookupvar('nifi::nifi_group') %> <%= scope.lookupvar('nifi::pid_dir') %>
+ExecStartPre=/bin/chown -R <%= scope.lookupvar('nifi::nifi_user') %>:<%= scope.lookupvar('nifi::nifi_group') %> <%= scope.lookupvar('nifi::pid_dir') %>
 SyslogIdentifier=<%= scope.lookupvar('nifi::service_name') %>
 ExecStart=<%= scope.lookupvar('nifi::install_dir') %>/bin/nifi.sh start
 ExecStop=<%= scope.lookupvar('nifi::install_dir') %>/bin/nifi.sh stop
